# frei0r_image

./: CMakeLists.txt  LICENSE  README.md  nodelet_frei0r_image.xml  package.xml
.github/workflows/: catkin_build.yml  ubuntu_18_04.yml  ubuntu_20_04.yml
config/: filter.yaml  frei0r.perspective  mixer2.yaml  mixer3.yaml  source.yaml
include/frei0r_image/: frei0r_image.hpp
launch/: frei0r.launch  image.launch  single.launch
scripts/: demo.py
src/: frei0r_image.cpp  frei0r_image_node.cpp  list_frei0rs.cpp  ros_image_pub.cpp  ros_image_sub.cpp  rosimage.cpp  select_plugin.cpp
srv/: LoadPlugin.srv
