<?xml version="1.0"?>
<package>
  <name>frei0r_image</name>
  <version>0.0.1</version>
  <description>Load frei0r libraries with a ros nodelet, use to process and generate ros images
  </description>
  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>
  <license>BSD3</license>
  <url type="website">https://github.com/lucasw/frei0r_image</url>
  <author email="wsacul@gmail.com">Lucas Walter</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>ddynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>ddynamic_reconfigure</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_frei0r_image.xml" />
  </export>
</package>
